Removed styles, Updated example and README.md

--- a/example.html
+++ b/example.html
@@ -1,44 +1,73 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
-	<head>
-		<link rel="stylesheet" href="resizable.css"/>
-		<script type="text/javascript" src="resizable.js"></script>
-		<script type="text/javascript">
-			resizable.initOnDocumentReady();
-		</script>
-		
-		<style type="text/css">
-			.inner {
-				display: block;
-				position: absolute;
-				min-width: 100px;
-				min-height: 50px;
-				padding: 20px;
-				background: #F0F;
-			}
-			
-			.outer {
-				display: block;
-				position: relative;
-				background: #EEE;
-				width: 640px;
-				height: 480px;
-				margin: 20px;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="outer resizable-limiter">
-			<div class="inner resizable resizable-limiter" style="left:100px;top:100px;width:300px;height:200px; background:#00F">
-				Content A
-				
-				<div class="inner resizable" style="left:100px;top:50px; background:#0F0">
-					Sub-content A
-				</div>
-			</div>
-			<div class="inner resizable" style="left:400px;top:200px; background:#F00">
-				Content B
-			</div>
-		</div>
-	</body>
+<head>
+    <script type="text/javascript" src="resizable.js"></script>
+    <script type="text/javascript">
+        resizable.initOnDocumentReady();
+    </script>
+    <style>
+        .js-resizable {
+            -moz-user-select: none;
+            -o-user-select: none;
+            -khtml-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select': none;
+        }
+        .js-resizable-corner {
+            position: absolute;
+            right: 0px;
+            bottom: 0px;
+            width: 10px;
+            height: 10px;
+            background: #000;
+        }
+        .outer {
+            display: block;
+            position: relative;
+            width: 640px;
+            height: 480px;
+            margin: 20px;
+            background-color: #EEE;
+        }
+        .inner {
+            display: block;
+            position: absolute;
+            min-width: 100px;
+            min-height: 50px;
+            padding: 20px;
+        }
+        .inner--1 {
+            left: 100px;
+            top: 100px;
+            width: 300px;
+            height: 200px;
+            background-color: #b1b1ff;
+        }
+        .inner--2 {
+            left: 100px;
+            top: 50px;
+            background-color: #92f192;
+        }
+        .inner--3 {
+            left: 400px;
+            top: 200px;
+            background-color: #ec7777;
+        }
+    </style>
+</head>
+<body>
+    <div class="outer js-resizable-limiter">
+        <div class="inner inner--1 resizable js-resizable-limiter">
+            Content A
+            
+            <div class="inner inner--2 js-resizable">
+                Sub-content A
+            </div>
+        </div>
+        <div class="inner inner--3 js-resizable">
+            Content B
+        </div>
+    </div>
+</body>
 </html>
