--- a/example.html
+++ b/example.html
@@ -12,7 +12,7 @@
             -khtml-user-select: none;
             -webkit-user-select: none;
             -ms-user-select: none;
-            user-select': none;
+            user-select: none;
         }
         .js-resizable-corner {
             position: absolute;
