Fix example typo

--- a/example.html
+++ b/example.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div class="outer js-resizable-limiter">
-        <div class="inner inner--1 resizable js-resizable-limiter">
+        <div class="inner inner--1 js-resizable js-resizable-limiter">
             Content A
             
             <div class="inner inner--2 js-resizable">
